# StorageAT

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Preload.cmake  README.md  README.ru.md  test.cpp
.github/workflows/: build-test.yml  cmake-multi-platform.yml
StorageAT/: CMakeLists.txt  StorageAT.cpp  StorageAT.hpp  StorageData.cpp  StorageData.hpp  StoragePage.cpp  StoragePage.h  StoragePage.hpp  StorageType.h  StorageType.hpp
StorageAT/include/: StorageAT.h  StorageData.h  StorageMacroblock.h  StoragePage.h  StorageSearch.h  StorageSector.h  StorageType.h
StorageAT/src/: StorageAT.cpp  StorageData.cpp  StorageMacroblock.cpp  StoragePage.cpp  StorageSearch.cpp  StorageSector.cpp
include/: StorageAT.hpp  StorageSearch.hpp  StorageSector.hpp  StorageType.hpp
src/: StorageAT.cpp  StorageData.cpp  StoragePage.cpp  StorageSearch.cpp  StorageSector.cpp
test/: CMakeLists.txt  StorageEmulator.cpp  StorageEmulator.h  test.cpp
